# vbwd-plugin-c2p2

./: .gitignore  README.md  __init__.py  admin-config.json  config.json  populate_db.py  pyproject.toml
.github/workflows/: tests.yml
c2p2/: models.py  routes.py  sdk_adapter.py  services.py
migrations/versions/: 20260422_1200_c2p2_transactions.py
tests/: conftest.py
tests/unit/: test_plugin.py  test_sdk_adapter.py  test_services.py
