[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vbwd-plugin-c2p2"
version = "26.6.1"
description = "VBWD backend plugin: c2p2"
requires-python = ">=3.11"
license = { text = "BSL-1.1" }
dependencies = []

# Runtime lives inside the vbwd-backend host, which provides `vbwd.*` (core) and
# any sibling plugins declared in PluginMetadata.dependencies. Those are NOT pinned
# here so the wheel stays host-agnostic; install the host separately.

[tool.setuptools]
# The repo root IS the plugins/c2p2/ directory; remap it so the wheel exposes
# the `plugins.c2p2` package that runtime imports (e.g. `from plugins.c2p2...`).
package-dir = { "plugins.c2p2" = "." }
packages = [
    "plugins.c2p2",
    "plugins.c2p2.c2p2",
]

[tool.setuptools.package-data]
# Ship everything a pip-installed plugin needs to be self-complete: config JSON,
# Alembic migrations (the shared backend env.py resolves version_locations from
# the installed package path), seed scripts, and bin/ helpers.
"plugins.c2p2" = [
    "*.json",
    "migrations/*.py",
    "migrations/*.mako",
    "migrations/*.ini",
    "migrations/**/*.py",
    "migrations/**/*.mako",
    "populate_db.py",
    "populate_*.py",
    "demo_seed.py",
    "bin/*",
    "bin/**/*",
]
